# claude-code-context

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  debug_complex.py  docker-compose.yml  install-global.sh  pyproject.toml  setup-project.sh  test_tree_sitter_distinction.py
.claude/: settings.json
claude_code_context/: __init__.py  cli.py
claude_code_context/mcp_server/: __init__.py  __main__.py  connection.py  context_builder.py  models.py  orchestrator.py  search_executor.py  server.py
cli/: __init__.py  main.py
config/: __init__.py  defaults.py  loader.py
config/templates/: global.toml.template  project.toml.template
core/: __init__.py
core/embeddings/: __init__.py  base.py  cache.py  registry.py  stella.py
core/indexer/: __init__.py  cache.py  collection_state.py  delta_calculator.py  entity_detector.py  entity_lifecycle_integration.py  entity_scanner.py  hybrid_indexer.py  incremental.py  periodic_sanity_task.py  reconciler.py  scan_mode.py  state_analyzer.py  workspace_scanner.py
core/models/: __init__.py  config.py  embeddings.py  entities.py  hooks.py  storage.py
core/parser/: __init__.py  base.py  c_parser.py  cpp_parser.py  css_parser.py  error_recovery.py  go_parser.py  html_parser.py  java_parser.py  javascript_parser.py  json_parser.py  parallel_pipeline.py  python_parser.py  registry.py  rust_parser.py  tree_sitter_base.py  yaml_parser.py
core/parser/queries/: javascript.scm  python.scm
core/search/: __init__.py  engine.py  query_analyzer.py  ranking.py  suggestions.py
core/storage/: __init__.py  client.py  indexing.py  schemas.py  search.py  utils.py
core/sync/: __init__.py  deterministic.py  engine.py  events.py  lifecycle.py  queue.py  validator.py  watcher.py
docs/: MCP_INTEGRATION.md
hooks/: __init__.py  user_prompt_submit.py
scripts/: install_stella.py  setup-qdrant.sh  setup_project.py  test-project.sh
templates/: CLAUDE.md.template
templates/.claude/: settings.json.template
test-harness/: cleanup-test-env.sh  run-all-tests.sh  setup-test-env.sh  test-multi-project.sh
test-harness/test-env/: multi-project-test-report.md
test-harness/test-env/configs/: test-env.sh
test-harness/test-env/projects/api-server/: README.md  example.py
test-harness/test-env/projects/api-server/.claude/: settings.json
test-harness/test-env/projects/api-server/app/: main.py
test-harness/test-env/projects/data-pipeline/: README.md  example.py  requirements.txt
test-harness/test-env/projects/data-pipeline/.claude/: settings.json
test-harness/test-env/projects/data-pipeline/pipeline/: main.py
test-harness/test-env/projects/ml-service/: README.md  example.py  requirements.txt  service.py
test-harness/test-env/projects/ml-service/.claude/: settings.json
test-harness/test-env/projects/mobile-app/: README.md  example.py  package.json
test-harness/test-env/projects/mobile-app/.claude/: settings.json
test-harness/test-env/projects/mobile-app/src/: App.tsx
test-harness/test-env/projects/web-app/: README.md  example.py  package.json
test-harness/test-env/projects/web-app/.claude/: settings.json
test-harness/test-env/projects/web-app/src/: App.tsx
test-harness/test-env/results/: test-results.txt
tests/: __init__.py  test_batch_indexer.py  test_c_parser.py  test_cache.py  test_cli.py  test_config.py  test_config_loader.py  test_cpp_parser.py  test_css_parser.py  test_delta_calculation.py  test_delta_scan_bulk_ops.py  test_delta_scan_chunked_delete.py  test_delta_scan_collection.py  test_delta_scan_integration.py  test_delta_scan_upsert.py  test_delta_scan_workspace.py  test_embedding_cache.py  test_embeddings_base.py  test_embeddings_registry.py  test_entities.py  test_error_recovery.py  test_go_parser.py  test_hooks_model.py  test_html_parser.py  test_hybrid_indexer.py  test_hybrid_indexer_delta_mode.py  test_hybrid_qdrant_client.py  test_hybrid_searcher.py  test_incremental_indexer.py  test_indexer_integration.py  test_install_stella.py  test_integration.py  test_integration_parser_storage.py  test_integration_real_data.py  test_java_parser.py  test_javascript_parser.py  test_json_parser.py  test_parallel_pipeline.py  test_parser_base.py  test_performance_benchmarks.py  (+12 more)
tests/fixtures/: __init__.py  real_code_samples.py
tests/mcp_server/: __init__.py  test_connection.py  test_package_structure.py  test_search_executor.py  test_server_basic.py
tests/mcp_server/integration/: test_claude_orchestration_e2e.py  test_cli_integration.py  test_iterative_search_e2e.py  test_mcp_integration.py  test_mcp_orchestration_e2e.py  test_mcp_orchestration_e2e.py.bak  test_mcp_orchestration_e2e.py.bak2
tests/mcp_server/unit/: test_context_builder.py  test_orchestrator.py
tests/sync/: __init__.py  test_consistency_validator.py  test_deterministic_ids.py  test_event_queue.py  test_file_watcher.py  test_lifecycle_manager.py
tests/test_indexer/: test_comprehensive_realtime_sync.py  test_entity_change_detector.py  test_entity_lifecycle_integration.py  test_entity_scan_mode.py  test_entity_scanner.py  test_entity_state_analyzer.py
